--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 *.dll
 *.so
 *.dylib
-.idea
-# Test binary, built with `go test -c`
+
+# Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+.idea
+.env
+bin/*
+vendor
