--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,37 @@
-version: '2'
-# Define services
+version: '3.3'
+
 services:
 
-  # App Service
-  api:
-    # Configuration for building the docker image for the service
-    build:
-      context: . # Use an image built from the specified dockerfile in the current directory.
-      dockerfile: Dockerfile
+  mysql:
+    container_name: starterkitdb
+    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:8.0.20
+    restart: always
     ports:
-      - "4000:4000" # Forward the exposed port 8080 on the container to port 8080 on the host machine
-    restart: unless-stopped
+      - "3306:3306"
+    expose:
+      - 3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
+
+  server:
+    image: starterkitapi
+    build:
+      context: .
+      dockerfile: dockerfile.api
+    ports:
+      - "8080:8080"
+    # Override the env according to your target environment, we can utilize .env to store env vars in file
+    environment:
+      - APP_ENV=${APP_ENV}
+      - APP_DSN=${DB_USER}:${DB_PASSWORD}@(mysql:3306)/${DB_NAME}?parseTime=true&multiStatements=true
+      - WAIT_HOSTS=mysql:3306
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=10
+      - WAIT_HOST_CONNECT_TIMEOUT=30
+    depends_on:
+      - mysql
+    command: sh -c "/wait && /app/entrypoint.sh"
